[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "LLMitlessCLI"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "ddgs",
    "requests",
]

[project.scripts]
llmitless = "LLMitlessCLI.LLMitlessCLI:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["LLMitlessCLI*"]
